--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,14 @@ const data = await Promise.all(
 
 const articles = data
 	.flat()
-	.sort((a, b) => new Date(b.pubDate) - new Date(a.pubDate));
+	.filter((article) => article.pubDate)
+	.sort((a, b) => {
+		if (a.pubDate && b.pubDate) {
+			return new Date(a.pubDate) < new Date(b.pubDate) ? 1 : -1;
+		}
+
+		return -1;
+	});
 ---
 
 <Layout title="RSS feed">
@@ -41,7 +48,9 @@ const articles = data
 						<section>
 							<div>{article.creator}</div>
 							<div>
-								{new Date(article.pubDate).toLocaleDateString()}
+								{new Date(
+									article.pubDate || 0,
+								).toLocaleDateString()}
 							</div>
 						</section>
 					</li>
