--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,17 +43,17 @@ const articles = data
 		<ul>
 			{
 				articles.map((article) => (
-					<li id={article.guid}>
+					<li id={article?.guid}>
 						<h2>
-							<a target="_blank" href={article.link}>
-								{article.title}
+							<a target="_blank" href={article?.link}>
+								{article?.title}
 							</a>
 						</h2>
 						<section>
-							<div>{article.creator}</div>
+							<div>{article?.creator}</div>
 							<div>
 								{new Date(
-									article.pubDate || 0,
+									article?.pubDate || 0,
 								).toLocaleDateString()}
 							</div>
 						</section>
